creating calander bundle by adding Sport\CalendarBundle folder,  updating AppKernel.php by adding SportRadarCalendarBundle to registerBundles , Similarly app/config/routing.yml route definition added to it: sport_radar_calendar

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+sport_radar_calendar:
+    resource: "@SportRadarCalendarBundle/Resources/config/routing.xml"
+    prefix:   /
+
 app:
     resource: '@AppBundle/Controller/'
     type: annotation
