creating Sport entity and Event entity, and  replacing AppBundle\: src/AppBundle by : src/  in aultoload Object

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,6 +1,6 @@
 sport_radar_calendar:
     resource: "@SportRadarCalendarBundle/Resources/config/routing.xml"
-    prefix:   /
+    prefix:   /calendar/
 
 app:
     resource: '@AppBundle/Controller/'
