updated routing.yml file by changing   prefix: / into prefix: /calendar/ , created From\SportType and created SportController into SportRadar/CalendarBundle/Controller/SportController.php.,

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+sport_radar_calendar_sport:
+    resource: "@SportRadarCalendarBundle/Controller/SportController.php"
+    type:     annotation
+
 sport_radar_calendar:
     resource: "@SportRadarCalendarBundle/Resources/config/routing.xml"
     prefix:   /calendar/
