--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -79,6 +79,8 @@ fos_rest:
         view_response_listener: true
     format_listener:
         rules:
+            - { path: '^/calendar', priorities: [ 'text/html', '*/*'], fallback_format: html, prefer_extension: true }
             - { path: '^/', priorities: ['json'], fallback_format: 'json', prefer_extension: false }
+
     body_listener:
         enabled: true
