created EventManger service by creating src\SportRadar\CalendarBundle\Service\EventManager.php updating the contains of service.yml and using     one method saveEvent and getAllEvents called from EventManager by postEventtAction and getEventtAction

--- a/src/AppBundle/Resources/config/serialization.yml
+++ b/src/AppBundle/Resources/config/serialization.yml
@@ -2,11 +2,11 @@
 SportRadar\CalendarBundle\Entity\Sport:
     attributes:
         id:
-            groups: ['sport']
+            groups: ['sport','event']
         title:
-            groups: ['sport']
+            groups: ['sport','event']
         events:
-            groups: ['sport']
+            groups: ['sport','event']
 SportRadar\CalendarBundle\Entity\Event:
     attributes:
         id:
